--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <meta name="theme-color" content="#6750A4" />
     <title>Pseudo Localization Demo</title>
 
-    <link rel="manifest" href="./data/manifest.json" />
-    <link rel="icon" type="image/png" href="./assets/icon.png" />
+    <script>
+        window.BASE_PATH = location.pathname.replace(/\/[^/]*$/, '') + '/';
+    </script>
+    <link rel="icon" type="image/png" href="assets/icon.png" />
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <script type="module" src="https://unpkg.com/@material/web/all.js?module"></script>
 
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
@@ -35,7 +37,9 @@
                 </a>
             </div>
             <button id="menu-btn" class="menu-btn">
-                <span class="material-icons">more_vert</span>
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"/>
+                </svg>
             </button>
         </div>
 
@@ -199,10 +203,10 @@
 
     <div id="toast" class="toast"></div>
 
-    <script type="module" src="./src/app.js"></script>
+    <script type="module" src="src/app.js"></script>
     <script>
         if ("serviceWorker" in navigator) {
-            navigator.serviceWorker.register("./sw.js");
+            navigator.serviceWorker.register(window.BASE_PATH + "sw.js");
         }
     </script>
 </body>
