--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </script>
     <link rel="icon" type="image/png" href="assets/icon.png" />
 
+
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <script type="module" src="https://unpkg.com/@material/web/all.js?module"></script>
 
@@ -198,6 +199,17 @@
                 <button class="modal-close" id="close-about-btn"><span class="material-icons">close</span></button>
             </div>
             <div class="modal-content" id="about-content"></div>
+        </div>
+    </div>
+
+    <div id="lang-modal" class="modal">
+        <div class="modal-backdrop" id="lang-backdrop"></div>
+        <div class="modal-panel lang-modal-panel">
+            <div class="modal-header">
+                <span id="lang-modal-title">Language</span>
+                <button class="modal-close" id="close-lang-btn"><span class="material-icons">close</span></button>
+            </div>
+            <div class="modal-content" id="lang-list"></div>
         </div>
     </div>
 
