--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.5.0/lz-string.min.js"></script>
     <script type="module" src="https://unpkg.com/@material/web/all.js?module"></script>
 
     <link rel="stylesheet" href="css/style.css" />
